# wa-VeriTrace-project

./: README.md  pyproject.toml
examples/: quickstart.py
tests/: test_veritrace.py
veritrace/: __init__.py  backends.py  claims.py  core.py  exceptions.py  models.py  sources.py
web/: index.html
