[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veritrace"
version = "0.1.0"
description = "Source-grounded verification for LLM answers: only let through what can be traced to documents you trust."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Wael Alebrahim" }]
keywords = [
    "llm", "hallucination", "rag", "grounding", "citations",
    "verification", "guardrails", "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # core is pure standard library, on purpose

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/waelalebrahim/wa-001-veritrace"
Issues = "https://github.com/waelalebrahim/wa-001-veritrace/issues"

[tool.setuptools.packages.find]
include = ["veritrace*"]
